# adi_dmac_iio_client

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  target.dtsi  target.tcl
boot/: CMakeLists.txt  boot.bif.in
cmake/modules/: FindBootgen.cmake  FindHSI.cmake  FindVivado.cmake
cmake/scripts/: dmac_kmod.cmake  fsbl.cmake  hdl.cmake  kernel.cmake  ssbl.cmake  toolchain.cmake
doc/: README  target.dtsi
dts/: zynq_adrv9364_system.dts
kmod/: Makefile  iio_axi_dmac.c
patches/hdl/: 0001-projects-adrv9364z7020-ccbob_lvds-Add-AXI-DMAC-loop-.patch
patches/kernel/: 0001-arch-arm-configs-Add-default-configuration-for-adrv9.patch  0002-dts-Add-target-zynq-adrv9364z7020-for-AXI-DMAC-test.patch  0003-gcc-10-will-default-to-fno-common-which-causes-this-.patch
patches/scripts/: apply_patches.sh
patches/ssbl/: 0001-configs-zynq_adrv9361_m6_defconfig-Add-configuration.patch  0002-gcc-10-will-default-to-fno-common-which-causes-this-.patch
scripts/: hsi_gen_fsbl.tcl
test/: CMakeLists.txt  iio_axi_dmac_test.c
uenv/: uEnv.txt.in
